<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">Perfect Reader</string>
    <string name="needStoragePermissions">Приложению необходимо предоставить права</string>
    <string name="bookOpenError">Ошибка при открытии книги</string>
    <string name="bookMenuBookmarks">Закладки</string>
    <string name="bookMenuGoto">Перейти</string>
    <string name="bookMenuSettings">Настройки</string>
    <string name="bookMenuSearch">Поиск</string>
    <string name="bookMenuSwitchTheme">Переключить тему</string>
    <string name="bookMenuAutoScroll">Включить автопрокрутку</string>
    <string name="bookMenuTextToSpeech">Читать вслух</string>
    <string name="bookMenuAddBookmark">Добавить закладку</string>
    <string name="googleTranslateNotInstalled">Приложение "Google Translate" не установлено</string>
    <string name="selectionCopiedToClipboard">Текст скопирован</string>
    <string name="selectionCopyText">Копировать</string>
    <string name="selectionTranslateText">Перевести</string>

    <string name="settingPageMargins">Поля страницы</string>
    <string name="settingTextSize">Размер текста</string>
    <string name="settingTextLineHeight">Межстрочное расстояние</string>
    <string name="settingTextGamma">Гамма прозрачности текста</string>
    <string name="settingTextColorGamma">Гамма цвета текста</string>
    <string name="settingTextColorContrast">Контрасность цвета текста</string>
    <string name="settingTextColorBrightness">Яркость цвета текста</string>
    <string name="settingTextStrokeWidth">Утолщение текста</string>
    <string name="settingTextScaleX">Ширина текста</string>
    <string name="settingTextLetterSpacing">Межбуквенное расстояние</string>
    <string name="settingScreenBrightness">Яркость подсветки</string>

    <string name="actionSettingIncrease">увеличение</string>
    <string name="actionSettingDecrease">уменьшение</string>

    <string name="actionNone">Нет действия</string>
    <string name="actionToggleMenu">Меню</string>
    <string name="actionExitActivity">Выход</string>
    <string name="actionGoToLibraryLast">Последние книги</string>
    <string name="actionGoToLibraryFavourite">Избранные книги</string>
    <string name="actionGoToLibraryFiles">Папка с книгами</string>
    <string name="actionGoToLibraryOpds">OPDS каталоги</string>
    <string name="actionGoToSettings">Настройки</string>
    <string name="actionGoToTableOfContents">Содержание</string>
    <string name="actionGoToBookmarks">Закладки</string>
    <string name="actionGoToNotes">Заметки</string>
    <string name="actionGoToMarks">Пометки</string>
    <string name="actionGoToNextBookInHistory">Следующая книга</string>
    <string name="actionGoToPreviousBookInHistory">Предыдущая книга</string>
    <string name="actionShowFastSettings">Быстрые настройки</string>
    <string name="actionShowSearch">Поиск</string>
    <string name="actionShowGoPage">Переход на страницу</string>
    <string name="actionShowBookInfo">Информация о книге</string>
    <string name="actionToggleAutoscroll">Автопрокрутка</string>
    <string name="actionToggleTextSpeech">Озвучивание текста</string>
    <string name="actionAddBookmark">Добавить закладку</string>
    <string name="actionAddBookToFavourite">Добавить книгу в избранное</string>

    <string name="actionScroll">Листание страницы / скроллирование свитка</string>
    <string name="actionGoNextPage">Следующая страница</string>
    <string name="actionGoPreviousPage">Предыдущая страница</string>
    <string name="actionGoNextPageWithoutAnimation">Следующая страница (без анимации)</string>
    <string name="actionGoPreviousPageWithoutAnimation">Предыдущая страница (без анимации)</string>
    <string name="actionGoNextPage10">На 10 страниц вперед</string>
    <string name="actionGoPreviousPage10">На 10 страниц назад</string>
    <string name="actionGoBookBegin">В начало книги</string>
    <string name="actionGoBookEnd">В конец книги</string>
    <string name="actionGoNextChapter">В начало главы</string>
    <string name="actionGoPreviousChapter">В конец главы</string>
    <string name="actionGoBackByHistory">Прошлая страница (в истории преходов)</string>
    <string name="actionGoForwardByHistory">Будущая страница (в истории преходов)</string>

    <string name="actionSelectWord">Выделеть слово</string>
    <string name="actionSelectWordAtCenter">Выделеть слово</string>
    <string name="actionTranslateWord">Перевести слово</string>
    <string name="actionSearchWord">Найти слово в Google</string>
    <string name="actionWikiWord">Найти слово в Wikipedia</string>

    <string name="actionNextTheme">Следующая тема</string>
    <string name="actionPreviousTheme">Предыдущая тема</string>
    <string name="actionToggleFullScreen">Полноэкранны режим</string>
    <string name="actionToggleOrientation">Ориентация экрана</string>
    <string name="actionToggleBookCssEnabled">Включить встроенные стили книги</string>

    <string name="actionChangePageMargins">Поля страницы</string>
    <string name="actionChangeTextSize">Размер текста</string>
    <string name="actionChangeTextLineHeight">Межстрочное расстояние</string>
    <string name="actionChangeTextGamma">Гамма прозрачности текста</string>
    <string name="actionChangeTextColorGamma">Гамма цвета текста</string>
    <string name="actionChangeTextColorContrast">Контрасность цвета текста</string>
    <string name="actionChangeTextColorBrightness">Яркость цвета текста</string>
    <string name="actionChangeTextStrokeWidth">Утолщение текста</string>
    <string name="actionChangeTextScaleX">Ширина текста</string>
    <string name="actionChangeTextLetterSpacing">Межбуквенное расстояние</string>
    <string name="actionChangeScreenBrightness">Яркость подсветки</string>

    <string name="settingsUIFont">Шрифт</string>
    <string name="settingsUIFormat">Формат</string>
    <string name="settingsUITheme">Тема</string>
    <string name="settingsUIScreen">Экран</string>
    <string name="settingsUIControl">Управление</string>

    <string name="settingsUIFontFamily">Гарнитура</string>
    <string name="settingsUIFontStyle">Стиль</string>
    <string name="settingsUIFontStyleBold">Жирный</string>
    <string name="settingsUIFontStyleItalic">Курсив</string>
    <string name="settingsUIFontSize">Размер</string>
    <string name="settingsUIFontWidth">Ширина</string>
    <string name="settingsUIFontBoldness">Жирность</string>
    <string name="settingsUIFontSkew">Наклон</string>
    <string name="settingsUIFontHinting">Хинтинг</string>
    <string name="settingsUIFontHintingDesc">Четкие символы при небольшом разрешении</string>
    <string name="settingsUIFontAntialiasing">Сглаживание</string>

    <string name="settingsUIFormatHyphenation">Переносы</string>
    <string name="settingsUIFormatPadding">Поля</string>
    <string name="settingsUIFormatLineHeight">Межстрочное расстояние</string>
    <string name="settingsUIFormatLetterSpacing">Межбуквенное расстояние</string>
    <string name="settingsUIFormatParagraphSpacing">Межабзацное расстояние</string>
    <string name="settingsUIFormatFirstLineIndent">Красная строка</string>
    <string name="settingsUIFormatHangingPunctuation">Висячая пунктуация</string>
    <string name="settingsUIFormatHangingPunctuationDesc">Знаки пунктуации за пределами полей</string>
    <string name="settingsUIFormatJustify">По ширине</string>

    <string name="settingsUIColorHEX">HEX</string>
    <string name="settingsUIThemeBackground">Фон</string>

    <string name="settingsUIThemeBackgroundColor">Цвет фона</string>
    <string name="settingsUIThemeBackgroundSelectPicture">Картинка</string>
    <string name="settingsUIThemeBackgroundSelectColor">Цвет</string>
    <string name="settingsUIThemeBackgroundPicture">Картинка фона</string>
    <string name="settingsUIThemeBackgroundContentAwareResize">Масштабирование с учетом содержимого</string>
    <string name="settingsUIThemeText">Текст</string>
    <string name="settingsUIThemeTextGammaCorrection">Гамма-коррекция</string>
    <string name="settingsUIThemeTextShadow">Тень</string>
    <string name="settingsUIThemeTextShadowEnabled">Показывать</string>
    <string name="settingsUIThemeTextShadowColor">Цвет</string>
    <string name="settingsUIThemeTextShadowOpacity">Непрозрачность</string>
    <string name="settingsUIThemeTextShadowAngle">Угол</string>
    <string name="settingsUIThemeTextShadowOffset">Смещение</string>
    <string name="settingsUIThemeTextShadowSize">Размер</string>
    <string name="settingsUIThemeTextShadowBlur">Размытие</string>
    <string name="settingsUIThemeSelection">Выделение</string>

    <string name="settingsUIScreenAnimation">Анимация</string>
    <string name="settingsUIScreenTimeout">Время отключения</string>
    <string name="settingsUIScreenTimeoutSystem">Системное</string>
    <string name="settingsUIScreenBrightness">Яркость</string>
    <string name="settingsUIScreenBrightnessSystem">Системная</string>
    <string name="settingsUIScreenOrientation">Ориентация</string>
    <string name="settingsUIScreenOrientationSystem">Системная</string>
    <string name="settingsUIScreenOrientationPortrait">Портретная</string>
    <string name="settingsUIScreenOrientationLandscape">Альбомная</string>

    <string name="settingsUIScreenFooter">Колонтитул</string>
    <string name="settingsUIScreenFooterPageNumber">Номер страницы</string>
    <string name="settingsUIScreenFooterNumberOfPages">Количество страниц</string>
    <string name="settingsUIScreenFooterChapter">Глава</string>
    <string name="settingsUIScreenFooterHide">Скрывать</string>
    <plurals name="settingsUIScreenFooterCount">
        <item quantity="zero">Нет элементов</item>
        <item quantity="one">%d элемент</item>
        <item quantity="two">%d элемента</item>
        <item quantity="few">%d элементов</item>
        <item quantity="many">%d элементов</item>
        <item quantity="other">%d элементов</item>
    </plurals>

    <string name="searchHint">Поиск…</string>
    <string name="searchNoResultsFound">Ничего не найдено</string>
    <string name="searchExactMatch">Точное совпадение</string>
    <string name="searchCaseSensitive">Учет регистра</string>
    <string name="searchResultsInfo">Найдено %1$s</string>
    <string name="searchResultsOverMaxInfo">Найдено больше %1$s</string>

    <string name="libraryEmptyFolder">Пустая папка</string>
    <string name="libraryFolders">Папки</string>
    <string name="libraryFoldersInternal">Память</string>
    <string name="libraryFoldersExternal">SD карта</string>

    <plurals name="libraryFolderBookCount">
        <item quantity="zero">Нет книг</item>
        <item quantity="one">%d книга</item>
        <item quantity="two">%d книги</item>
        <item quantity="few">%d книги</item>
        <item quantity="many">%d книг</item>
        <item quantity="other">%d книг</item>
    </plurals>

    <string name="librarySearch">Поиск</string>
    <string name="librarySort">Сортировка</string>
    <string name="librarySortName">Название</string>
    <string name="librarySortAuthor">Автор</string>
    <string name="librarySortSize">Размер</string>
    <string name="librarySortReadPercent">Прочитано</string>
    <string name="librarySortAsc">По возрастанию</string>
    <string name="librarySortDesc">По убыванию</string>

    <plurals name="minutes">
        <item quantity="zero">%d минут</item>
        <item quantity="one">%d минута</item>
        <item quantity="two">%d минуты</item>
        <item quantity="few">%d минут</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>